unpackaged/main/default/objects/pse__IHC_Mapping_Jira_to_PSA__mdt/pse__IHC_Mapping_Jira_to_PSA__mdt.object-meta.xml
<CustomObject>
    <description>Contains records that specify the required information for creating Jira-PSA field mappings in Integration Hub Connector.</description>
    <label>IHC Mapping Jira to PSA</label>
    <pluralLabel>IHC Mappings Jira to PSA</pluralLabel>
</CustomObject>