unpackaged/main/default/objects/pse__IHC_Mapping_Jira_to_PSA__mdt/fields/pse__Jira_Object__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Object__c</fullName>
    <description>Jira Cloud object for which the mapping is created in Integration Hub Connector.</description>
    <inlineHelpText>Jira Cloud object for which the mapping is created in Integration Hub Connector.</inlineHelpText>
    <label>Jira Cloud Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>