unpackaged/main/default/objects/pse__IHC_Mapping_Jira_to_PSA__mdt/fields/pse__PSA_Object__c.field-meta.xml
<CustomField>
    <fullName>pse__PSA_Object__c</fullName>
    <description>PSA object for which the mapping is created in Integration Hub Connector.</description>
    <inlineHelpText>PSA object for which the mapping is created in Integration Hub Connector.</inlineHelpText>
    <label>PSA Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>