unpackaged/main/default/objects/pse__IHC_Mapping_Jira_to_PSA__mdt/fields/pse__VDR_Key__c.field-meta.xml
<CustomField>
    <fullName>pse__VDR_Key__c</fullName>
    <description>Virtual Data Resource key used for the mapping in Integration Hub Connector.</description>
    <inlineHelpText>Virtual Data Resource key used for the mapping in Integration Hub Connector.</inlineHelpText>
    <label>VDR Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>